fix homepage vertical align

--- a/assets/_global.scss
+++ b/assets/_global.scss
@@ -122,6 +122,10 @@ p {
   align-items: center;
   position: relative;
   // text-align: center;
+
+  &.is-row {
+    flex-direction: row;
+  }
 }
 
 /* flex */
